receber-bank-services/k8s/aws/boleto-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boleto-service
  namespace: recebimentos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boleto-service
  template:
    metadata:
      labels:
        app: boleto-service
    spec:
      containers:
        - name: boleto-service
          image: replace-with-ecr/boleto-service:1.0.0
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: boleto-service
  namespace: recebimentos
spec:
  selector:
    app: boleto-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
