receber-bank-services/k8s/aws/query-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service
  namespace: recebimentos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service
          image: replace-with-ecr/query-service:1.0.0
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
  namespace: recebimentos
spec:
  selector:
    app: query-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
